--- a/index.html
+++ b/index.html
@@ -4,51 +4,187 @@
     <title>Test Page: Don't Panic</title>
     <meta charset="utf-8">
     <style>
-     a {
-       color: red;
+     /* GLOBAL STYLES */
+     h1 {
+       font-size: 7vw;
+       margin-top: 0;
      }
-     #exec-bio {
-       background-color: lightgray
+     a {
+       color: #f00;
+     }
+   
+     /* HERO STYLES */
+     .full-hero {
+       background-color: #c7dbfc;
+       height: 50vh;
+     }
+
+     /* GLOBAL STYLES */
+     .social-link {
+       background-color: rgba(150, 150, 150, 0.5);
+       border-radius: 99px;
+       box-sizing: border-box;
+       color: #fff;
+       display: inline-block;
+       font-family: helvetica, arial, sans;
+       font-size: 1rem;
+       font-weight: bold;
+       height: 2.5em;
+       line-height: 1;
+       padding-top: 0.85em;
+       text-align: center;
+       text-decoration: none;
+       vertical-align: middle;
+       width: 2.5em;
+     }
+    
+     .social-list {
+       list-style: none;
+       padding: 0;
+       text-align: center;
+     }
+     .social-list > li {
+       display: inline-block;
+       margin:0 0.5em
+     } 
+     /* BIO STYLES */
+     .bio-wrapper {
+       font-size: 24px;
+     }
+     .bio-wrapper:after {
+       visibility: hidden;
+       display: block;
+       font-size: 0;
+       content: " ";
+       clear: both;
+       height: 0;
      }
      .bio-box {
        border: 1px solid black;
+       box-sizing: border-box;
+       float: left;
+       font-size: 1rem;
+       padding: 2%;
+       width: 25%;
      }
-     .biq-box {
-       background-color: azure;
+     .bio-box img{
+       width: 100%;
      }
-     .bio-box a {
-       color: green;
+     .bio-box h3{
+       color: #fff;
+       font-size: 1.5em;
+       margin: -40px 0 1em;
+       text-align: center;
      }
-     #orange-link {
-       color: orange; 
+     .bio-box .social-link {
+       display: inline-block;
+       width: 40px;
+       margin: auto;
+     }
+
+     .bio-copy {
+       font-size: 1em;
+       line-height: 1.5;
+     }
+
+     .bio-copy a {
+       padding: 10px;
+       color: green; 
      }
     </style>
   </head>
   <body>
+    <div class="full-hero hero-home">
     <h1>I'm an h1</h1>
-    <ul>
+    <ul class="social-list">
       <li>
-        <a href="http://example.com/">Link</a>
+        <a href="http://example.com/" class="social-link">Fb</a>
       </li>
       <li>
-        <a href="http://example.com/">Link</a>
+        <a href="http://example.com/" class="social-link">Tw</a>
       </li>
       <li>
-        <a href="http://example.com/">Link</a>
+        <a href="http://example.com/" class="social-link">Gh</a>
       </li>
     </ul>
+    </div>
     <h2>I'm an h2</h2>
-    <div id="exec-bio" class="bio-box biq-box">
-      <a href="http://example.com/">I'm a link</a>
+    <div class="bio-wrapper">
+    <div class="bio-box">
+      <img src="http://placekitten.com/g/400/400">
+      <h3>Michael Hartl</h3>
+      <a href="http://twitter.com/mhartl" class="social-link">here</a>
+      <div class="bio-copy">
+        <p>
+          Known for his dazzling charm, rapier wit, and unrivaled humility,
+          Michael is the creator of the 
+          <a href="http://railstutorial.org/">Ruby on Rails Tutoria</a>
+          and principal author of the <a href="https://learnenough.com/">Learn
+          Enough to Be Dangerous</a> introductory squence. Michael is also 
+          notorious as the founder of <a href="http://tauday.com/">Tao Day</a>
+          and author of <a href="http://tauday.com/tau-manifesto"><em>The Tao 
+          Manifestor</em></a>, but rumors that he's secretly a supervillain
+          are slightly exaggerated.
+        </p>
+      </div>
     </div> 
-    <div class="bio-box biq-box">
-      <a id="orange-link" href="http://example.com/">I'm a link</a>
+    
+    <div class="bio-box">
+      <img src="http://placekitten.com/g/400/400">
+      <h3>Lee Donahoe</h3>
+      <a href="http://twitter.com/leedonahoe" class="social-link">here</a>
+      <div class="bio-copy">
+        <p>
+          When he's not literally swimming with sharks or hunting powder
+          stashes on his snowboard, you can find Lee in front of his computer
+          designed interfaces, doing front-end development, or writing some
+          of the interface-related Learn Enough tutorials. 
+        </p>
+      </div>
+    </div>
+
+    <div class="bio-box">
+      <img src="http://placekitten.com/g/400/400">
+      <h3>Nick Merwin</h3>
+      <a href="http://twitter.com/nickmerwin" class="social-link">here</a>
+      <div class="bio-copy">
+        <p>
+          You may have seen hime shredding guitar live with Capital Cities on 
+          Jimmy Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true
+          nerd at heart. He's just as happy shredding well-spec'd lines of code 
+          from a tour bus as he is from his kitchen table.
+        </p>
+      </div>
     </div> 
-    <div class="bio-box biq-box">
-      <a href="http://example.com/">I'm a link</a>
-    </div> 
-    <div class="bio-box biq-box">
-      <a href="http://example.com/">I'm a link</a>
-    </div> 
+ 
+    <div class="bio-box">
+      <img src="http://placekitten.com/g/400/400">
+      <h3>??</h3>
+      <p>
+        The Future
+      </p>
+    </div>
+    </div>
+
+    <p>
+      Learn Enough to Be Dangerous is a leader in the movement to teach
+      <em>technical sophistication</em>, the seemingly magical ability to take
+      command of your computer and get it to do your bidding. This includes
+      everything from command lines and coding to guessing keyboard shortcuts,
+      Googling error messages, and knowing when to just reboot the darn thing.
+    </p>
+    <p>
+      Learn Enough to Be Dangerous is an outgrowth of the
+      <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> and the
+      <a href="http://www.softcover.io/">Softcover publishing platform</a>.
+      This page is part of the sample site for
+      <a href="http://learnenough.com/html-tutorial"><em>Learn Enough HTML to
+      Be Dangerous</em></a>, which teaches the basics of
+      <strong>H</strong>yper<strong>T</strong>ext <strong>M</strong>arkup
+      <strong>L</strong>anguage, the universal language of the World Wide Web.
+      Other related tutorials can be found at
+      <a href="http://learnenough.com/">learnenough.com</a>
+    </p>
+ 
   </body>
 </html>
