--- a/index.html
+++ b/index.html
@@ -1,3 +1,106 @@
 ---
 layout: default
 ---
+
+<div class="home">
+<div class="full-hero hero-home">
+  <!--<p style="color: #fff;">TEST</p>-->
+  <div class="hero-content">
+    <!--<p style="color: #fff;">TEST2</p>-->
+    <h1>CODE DANGEROUSLY</h1>
+    <ul class="social-list">
+      <li>
+        <a href="http://example.com/" class="social-link">Fb</a>
+      </li>
+      <li>
+        <a href="http://example.com/" class="social-link">Tw</a>
+      </li>
+      <li>
+        <a href="http://example.com/" class="social-link">Gh</a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<div class="home-callout">
+  <h1 class="callout-title">The Learn Enough Story</h1>
+  <div class="callout-copy">
+  <p>
+      Learn Enough to Be Dangerous is a leader in the movement to teach
+      <em>technical sophistication</em>, the seemingly magical ability to take
+      command of your computer and get it to do your bidding. This includes
+      everything from command lines and coding to guessing keyboard shortcuts,
+      Googling error messages, and knowing when to just reboot the darn thing.
+  </p>
+  <h3>Background</h3>
+  <p>
+      Learn Enough to Be Dangerous is an outgrowth of the
+      <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> and the
+      <a href="http://www.softcover.io/">Softcover publishing platform</a>.
+      This page is part of the sample site for
+      <a href="http://learnenough.com/html-tutorial"><em>Learn Enough HTML to
+      Be Dangerous</em></a>, which teaches the basics of
+      <strong>H</strong>yper<strong>T</strong>ext <strong>M</strong>arkup
+      <strong>L</strong>anguage, the universal language of the World Wide Web.
+      Other related tutorials can be found at
+      <a href="http://learnenough.com/">learnenough.com</a>
+  </p>
+  </div>
+</div>
+
+<div class="home-section">
+<h2>THE FOUNDERS</h2>
+<p> 
+  Learn Enough to Be Dangerous was founded in 2015 by Michael Hartl, Lee Donahoe and Nick Merwin.
+</p>
+<div class="bio-wrapper">
+    <div class="bio-box">
+      <img src="http://placekitten.com/g/400/400">
+      <h3>Michael Hartl</h3>
+      <a href="http://twitter.com/mhartl" class="social-link">here</a>
+      <div class="bio-copy">
+        <p>
+          Known for his dazzling charm, rapier wit, and unrivaled humility,
+          Michael is the creator of the 
+          <a href="http://railstutorial.org/">Ruby on Rails Tutoria</a>
+          and principal author of the <a href="https://learnenough.com/">Learn
+          Enough to Be Dangerous</a> introductory squence. Michael is also 
+          notorious as the founder of <a href="http://tauday.com/">Tao Day</a>
+          and author of <a href="http://tauday.com/tau-manifesto"><em>The Tao 
+          Manifestor</em></a>, but rumors that he's secretly a supervillain
+          are slightly exaggerated.
+        </p>
+      </div>
+    </div> 
+    
+    <div class="bio-box">
+      <img src="http://placekitten.com/g/400/400">
+      <h3>Lee Donahoe</h3>
+      <a href="http://twitter.com/leedonahoe" class="social-link">here</a>
+      <div class="bio-copy">
+        <p>
+          When he's not literally swimming with sharks or hunting powder
+          stashes on his snowboard, you can find Lee in front of his computer
+          designed interfaces, doing front-end development, or writing some
+          of the interface-related Learn Enough tutorials. 
+        </p>
+      </div>
+    </div>
+
+    <div class="bio-box">
+      <img src="http://placekitten.com/g/400/400">
+      <h3>Nick Merwin</h3>
+      <a href="http://twitter.com/nickmerwin" class="social-link">here</a>
+      <div class="bio-copy">
+        <p>
+          You may have seen hime shredding guitar live with Capital Cities on 
+          Jimmy Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true
+          nerd at heart. He's just as happy shredding well-spec'd lines of code 
+          from a tour bus as he is from his kitchen table.
+        </p>
+      </div>
+    </div> 
+</div>
+</div>
+</div>
+
